# bluetooth-sig-python

./: .flake8  .gitignore  .gitmodules  =0.18.0  BENCHMARK_RESULTS.md  CHANGELOG.md  CHANGELOG_NEW.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATACLASS_CONVERSION_GUIDE.md  DECOMPOSITION_PLAN.md  DOCS_BUILD.md  GITHUB_ISSUE_COMPREHENSIVE_EXAMPLES.md  GITHUB_ISSUE_EXAMPLE_INTEGRATION_SHOWCASE.md  HISTORY.md  LICENSE  MANIFEST.in  MESH_PROFILES_REGISTRY_IMPLEMENTATION_PLAN.md  OFFICIAL_BLE_EXAMPLES_REFERENCE.md  README.md  README_BENCHMARKS.md  REFACTOR_INSTRUCTIONS.md  SERVICE_CLASSES_REGISTRY_IMPLEMENTATION_PLAN.md  SIG_YAML_COVERAGE_AUDIT.md  TASK_01_1_enhance_base_characteristic.md  TASK_01_2_create_templates.md  TASK_01_3_expand_utils.md  TASK_02_1_convert_manual_parsing.md  TASK_02_2_standardize_length_validation.md  TASK_02_3_replace_hardcoded_range_validation.md  TASK_02_4_convert_concentration_characteristics.md  TASK_02_5_convert_environmental_characteristics.md  TASK_SUMMARY.md  ble_device_results.txt  ble_device_results_enhanced.txt  ble_device_results_enhanced_20250901_184914.txt  ble_device_results_enhanced_20250901_185245.txt  declarations-plan.md  demo_sig_translation.py  (+15 more)
.github/: ISSUE_TEMPLATE.md  SPHINX_MIGRATION_ISSUE.md  ai-agent-characteristic-rules.md  copilot-code-review.md  copilot-instructions.md  copilot-setup.yml  copilot-tasks.md  dependabot.yml
.github/ISSUE_TEMPLATE/: general-task.md
.github/agent-tasks/: 00-INDEX.md  02-improve-test-coverage.md  08-tutorial-documentation.md  README.md
.github/instructions/: bluetooth-gatt.instructions.md  docs-reorganization.instructions.md  documentation.instructions.md  memory.instruction.md  python-implementation.instructions.md  testing.instructions.md
.github/workflows/: README.md  benchmarks.yml  copilot-setup-steps.yml  docs.yml  lint-check.yml  release.yml  test-coverage.yml
.serena/: project.yml
.serena/memories/: bluetooth-sig-yaml-implementation-progress.md  browse_groups_registry_completion.md  declarations_registry_completion.md  mesh_profiles_registry_completion.md  project_overview.md  sdo_uuids_registry_completion.md  sig_yaml_coverage_progress.md  style_and_conventions.md  suggested_commands.md  task_completion.md  task_context_2025-10-09.md  todo_current.md
benchmarks/: bench_msgspec_migration.py
docs/: AGENT_GUIDE.md  BLUETOOTH_SIG_ARCHITECTURE.md  Bluetooth_sig_python_arch.md  HA_INTEGRATION_ARCHITECTURE.md  MSGSPEC_MIGRATION_STATUS.md  PERFORMANCE.md  README.md  SCRIPT_MIGRATION.md  architecture.md  benchmarks.md  index.md  installation.md  msgspec_migration_checklist.md  performance.md  quickstart.md  supported-characteristics.md  testing.md  usage.md  what-it-does-not-solve.md  what-it-solves.md  why-use.md
docs/api/: core.md  gatt.md  registry.md  types.md
docs/architecture/: decisions.md  index.md  overview.md
docs/community/: index.md
docs/explanation/: index.md  what-it-solves.md
examples/: README.md  README_THINGY52.md  __init__.py  advertising_parsing.py  async_ble_integration.py  basic_usage.py  ble_utils.py  comprehensive_test.py  enhanced_notifications.py  enhanced_service_explorer.py  library_comparison.py  library_comparison_new.py  library_integration.py  multi_characteristic_parsing.py  next_steps.md  notifications.py  practical_integration_guide.py  pure_sig_parsing.py  real_world_comparison.py  scanning.py  service_discovery.py  shared_utils.py  test_real_device_optimizations.py  test_scanning_features.py  testing_with_mocks.py  thingy52_bluepy.py  thingy52_characteristics.py  thingy52_example.py  thingy52_port.py  vendor_characteristics.py  with_bleak.py  with_bleak_new.py  with_bleak_retry.py  with_bleak_retry_new.py  with_bluepy.py  with_simpleble.py  with_simpleble_new.py
pybluetooth-sig/: README.md  justfile  pyproject.toml
pybluetooth-sig/docs/: index.md  installation.md  usage.md
pybluetooth-sig/src/bluetooth_sig_python/: __init__.py  cli.py
pybluetooth-sig/tests/: __init__.py  test_bluetooth_sig_python.py
scripts/: __init__.py  ble_debug.py  ble_device_debugger.py  check_lazy_exports.py  check_markdown.py  debug_registry.py  demo_gas_sensors.py  detect_changed_docs.py  docs_html_postprocess.py  enhanced_ble_debugger.py  example.py  extract_coverage_badge.py  extract_validation_info.py  fast_t52_connection.py  format.sh  gatt_coverage_report.py  gen_ref_pages.py  generate_char_service_list.py  generate_characteristics_list.py  generate_config.py  generate_constants.py  generate_diagrams.py  generate_lazy_exports.py  inspect_simpleble_char.py  lint.sh  lint_docs.py  normalize_specs_for_service_parser.py  path_config.py  show_hierarchy.py  show_sensors.py  t52_connection_report.md  test_connection_strategies.py  test_core.py  test_name_lookup.py  test_parsing.py  test_real_device.py  test_real_device_debug.py  test_selective_docs.py  test_uuid_lookup.py  test_yaml_loading.py  (+3 more)
src/: __init__.py
stubs/: simplepyble.pyi
tests/: README.md  conftest.py  test_advertising_types.py  test_base_characteristic_validation.py  test_battery_power_state.py  test_bit_field_utils.py  test_ble_gatt_device.py  test_bluetooth_sig_translator.py  test_body_composition_service.py  test_browse_groups_registry.py  test_constants.py  test_context_parsing.py  test_core_functionality.py  test_custom_characteristics_comprehensive.py  test_custom_registration.py  test_custom_services_comprehensive.py  test_cycling_power_parsing.py  test_data_parsing.py  test_declarations_registry.py  test_descriptors.py  test_device.py  test_device_types.py  test_docs_code_blocks.py  test_docs_hooks.py  test_enhanced_yaml_automation.py  test_environmental_sensing_expanded.py  test_examples.py  test_exceptions.py  test_field_level_diagnostics.py  test_gas_sensor_characteristics.py  test_generate_diagrams.py  test_glucose_monitoring.py  test_ha_integration_architecture.py  test_import_side_effects.py  test_logging.py  test_logging_field_errors.py  test_members_registry.py  test_mesh_profiles_registry.py  test_multi_characteristic_parsing.py  test_name_resolution.py  (+18 more)
(+2391 files in other folders)
