[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bluetooth-sig"
dynamic = ["version"]
authors = [{ name = "RonanB96", email = "RonanB96@users.noreply.github.com" }]
maintainers = [
    { name = "RonanB96", email = "RonanB96@users.noreply.github.com" },
]
description = "Pure Bluetooth SIG standards library for characteristic and service interpretation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["bluetooth", "bluetooth-sig", "gatt", "standards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml~=6.0.0",
    "msgspec>=0.18.0",
    "typing_extensions>=4.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
bugs = "https://github.com/RonanB96/bluetooth-sig-python/issues"
changelog = "https://github.com/RonanB96/bluetooth-sig-python/blob/master/changelog.md"
homepage = "https://github.com/RonanB96/bluetooth-sig-python"

[project.optional-dependencies]
dev = [
    "pytest~=8.4",
    "pytest-asyncio>=0.23.0,<1.3",
    "pytest-cov>=6.2,<8",
    "nest-asyncio>=1.5.0",
    "pytest-benchmark~=5.1",
    "pylint~=3.3",
    "ruff~=0.13",
    "pydocstyle~=6.3",
    "types-PyYAML~=6.0",
    "types-requests~=2.32",
    "mypy~=1.0",
    "ipdb~=0.13",
    "coverage~=7.0"]
test = [
    "pytest~=8.4",
    "pytest-asyncio>=0.23.0,<1.3",
    "pytest-cov>=6.2,<8",
    "nest-asyncio>=1.5.0",
    "pytest-benchmark~=5.1",
    "pytest-xdist~=3.0",
    "pytest-markdown-docs~=0.9",
    "playwright~=1.56",
    "pytest-playwright~=0.7",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "bleak>=0.21.0",
    "bleak-retry-connector>=2.13.1,<3",
    "simplepyble>=0.10.3",
    "bluepy>=1.3.0",
]
examples = [
    # BLE libraries for example integrations (now required in main dependencies)
    # kept here for documentation purposes only
    "bleak>=0.21.0",
    "bleak-retry-connector>=2.13.1,<3",
    "simplepyble>=0.10.3",
    "bluepy>=1.3.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-autobuild>=2024.2.4",
    "myst-parser>=2.0.0",
    "sphinx-design>=0.5.0",
    "furo>=2024.1.29",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-copybutton>=0.5.0",
    "linkify-it-py>=2.0.0",
    "pymdown-extensions>=10.0.0",
    "pydeps>=1.12.0",
    "pylint~=3.3",
]

[project.scripts]
# Note: No CLI scripts for this library package
# bluetooth_sig_python = "bluetooth_sig_python.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not benchmark and not built_docs and not playwright'"
norecursedirs = ["tests/benchmarks"]
markers = [
    "benchmark: marks benchmark tests (deselected by default)",
    "built_docs: marks tests that require built documentation (deselected by default)",
    "docs: Tests for documentation examples and code blocks",
    "code_blocks: Tests that execute code blocks extracted from markdown documentation",
    "playwright: Tests using Playwright for browser automation",
    "accessibility: Tests for documentation accessibility compliance",
]

[tool.hatch.build]
exclude = ["tests/*", "scripts/*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.hatch.build.hooks.vcs]
version-file = "src/bluetooth_sig/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bluetooth_sig"]

[tool.hatch.build.targets.wheel.sources]
"bluetooth_sig" = "bluetooth_sig"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pylint.MAIN]
source-roots = ["src"]
ignore = ["CVS", ".git", "__pycache__", ".venv", "_version.py"]
ignore-paths = ["^.git/.*$", "^.venv/.*$"]
persistent = true
jobs = 0
output-format = "colorized"
msg-template = "{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"
extension-pkg-allow-list = ["playwright"]
ignored-modules = ["playwright", "playwright.sync_api"]

[tool.pylint.DESIGN]
# Allow registries to have similar patterns - they inherit from base class
# Browse groups and declarations share common lookup patterns by design
min-similarity-lines = 15

[tool.pylint.FORMAT]
# Line length is handled by ruff - DO NOT SET max-line-length
# This section intentionally left without line length constraints

[tool.pylint.MESSAGE_CONTROL]
# Only globally disable issues that are handled by other tools or are project-wide
disable = [
    "C0103", # invalid-name (project uses some non-snake_case names for SIG constants)
    "C0301", # line-too-long (formatting handled by ruff)
    "W0311", # bad-indentation (formatting handled by ruff)
    "W0511", # fixme (TODO comments are useful throughout)
    "C0411", # wrong-import-order (handled by ruff import sorting)
    "C0412", # ungrouped-imports (handled by ruff import sorting)
    "C0413", # wrong-import-position (handled by ruff import sorting)
    "E0611", # no-name-in-module (editable install issue affects entire project)
    "R0903", # too-few-public-methods (not applicable to data structures like msgspec.Struct)
    "W1203", # logging-fstring-interpolation (f-strings in logging are fine for performance)
    ]

# Note: Other issues like broad-exception-caught, no-member, redefined-outer-name
# are now handled with targeted inline disables in specific files where they're needed.

[tool.pylint.BASIC]
good-names = ["id", "i", "j", "k", "ex", "Run", "_", "fp", "e"]

[tool.ruff]
line-length = 120
# Allow Ruff to apply safe, automatic fixes by default when invoked without
# explicit `--no-fix`/`--fix` flags. Individual CI or developer workflows may
# still override this via the command-line.
fix = true
target-version = "py39"
exclude = [".git", "__pycache__", "build", "dist", ".venv", ".venv*", ".eggs", "src/bluetooth_sig/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations - enforce type hints
    "D",   # pydocstyle (Google-style docstrings)
]
ignore = [
    "E701", # Multiple statements on one line (colon)
    "E702", # Multiple statements on one line (semicolon)
    "C901", # Function is too complex (we have some complex parsing functions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py files
# Tests and examples intentionally omit exhaustive Google-style docstrings in
# many places (fixtures, local test helpers, and example scripts). Ignore
# docstring-related (D...) codes in those paths so we can focus fixes on
# production code under `src/`.
"tests/**" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D401",
    "D417",
    # Tests frequently employ pytest fixtures which are referenced by name
    # as function parameters. This pattern can trigger redefinition or
    # "redefined outer name" style diagnostics from static analyzers like
    # Pyflakes/Ruff. Allow this pattern in tests explicitly.
    "F811",
    # pytest-benchmark doesn't have type stubs, so we must use Any for benchmark fixtures
    "ANN401",
]

[tool.ruff.lint.pydocstyle]
# Make Ruff's pydocstyle plugin use the same Google convention the project
# already declares for the standalone `pydocstyle` tool. This prevents Ruff
# from enabling incompatible pydocstyle rules and eliminates the spurious
# "incompatible rules" warnings that were previously reported during
# formatting/lint runs.
convention = "google"

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# Reformat python code examples found inside docstrings. This allows Ruff to
# automatically tidy up code fences and doctest examples inside docstrings.
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["bluetooth_sig"]
force-single-line = false

[tool.mypy]
# Strict mode configuration for Bluetooth SIG Python library
python_version = "3.10"  # Enable modern union syntax (X | Y)
strict = true

# Fix module path conflicts in editable installs
# mypy_path = "src:stubs"
explicit_package_bases = true

# Additional strict checks
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true

# Use package-based checking so mypy maps modules consistently for a src/ layout.
# This is the documented approach to avoid "Source file found twice" issues
# when the environment or installed packages expose sources under multiple roots.
packages = ["bluetooth_sig"]

# Keep explicit package bases to help mypy resolve namespace packages in src/

# Allow some flexibility for certain patterns
allow_redefinition = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
# Allow some flexibility for mock objects and fixtures
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = false  # Allow extra type: ignore comments for test flexibility
ignore_missing_imports = true  # Allow missing imports for test utilities
disallow_any_unimported = false  # Allow untyped imports in tests (e.g., playwright)

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = false  # Allow extra type: ignore comments for flexibility
disallow_any_unimported = false  # Allow untyped optional dependencies in examples

[[tool.mypy.overrides]]
module = "pydantic.*"
# Optional dependency
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "simplepyble.*"
# Simplepyble is an optional external dependency used in examples; it does not ship
# type stubs. Allow missing imports for it so example code mypy checks do not fail.
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bluepy.*"
# BluePy is an optional external dependency used in examples; it does not ship
# type stubs or py.typed marker. Allow mypy to treat it as untyped and disable
# strict checks that would fail due to untyped imports.
ignore_missing_imports = true
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "playwright.*"
# Playwright is an optional dependency for documentation tests.
# It has inline types but mypy has issues finding them in editable installs.
ignore_missing_imports = true
disallow_any_unimported = false

[tool.pydocstyle]
# Enforce Google-style docstrings as mandated by project standards
convention = "google"
# Prevent inheriting a parent pydocstyle config which could change the
# effective set of checked codes; keep the repository config deterministic.
inherit = false
