[project]
name = "pybluetooth-sig"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Ronan Byrne", email = "RonanB96@users.noreply.github.com"}
]
maintainers = [
  {name = "Ronan Byrne", email = "RonanB96@users.noreply.github.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/RonanB96/bluetooth_sig_python/issues"
changelog = "https://github.com/RonanB96/bluetooth_sig_python/blob/master/changelog.md"
homepage = "https://github.com/RonanB96/bluetooth_sig_python"

[project.scripts]
bluetooth_sig_python = "bluetooth_sig_python.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
